[gd_scene load_steps=6 format=3 uid="uid://6ovf4q0jiq57"]

[ext_resource type="Theme" uid="uid://cxq025fsmiuu3" path="res://assets/theme/theme.tres" id="1"]
[ext_resource type="PackedScene" path="res://src/game/level.tscn" id="2"]
[ext_resource type="Script" path="res://src/menu/online/lobby.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://ci7q6sor8okjm" path="res://assets/lobby-icons/options.png" id="4"]
[ext_resource type="PackedScene" uid="uid://dlcem3x0jdblq" path="res://src/menu/online/player.tscn" id="5"]

[node name="Lobby" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1")
script = ExtResource("3")
Level = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LobbyName" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
text = "lobby name"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Players" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Player1" parent="VBoxContainer/Players" instance=ExtResource("5")]
layout_mode = 2

[node name="Player2" parent="VBoxContainer/Players" instance=ExtResource("5")]
layout_mode = 2

[node name="Number" parent="VBoxContainer/Players/Player2" index="0"]
text = "2"

[node name="Player3" parent="VBoxContainer/Players" instance=ExtResource("5")]
layout_mode = 2

[node name="Number" parent="VBoxContainer/Players/Player3" index="0"]
text = "3"

[node name="Player4" parent="VBoxContainer/Players" instance=ExtResource("5")]
layout_mode = 2

[node name="Number" parent="VBoxContainer/Players/Player4" index="0"]
text = "4"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Start" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer5"]
layout_mode = 2
text = "Start"

[node name="Back" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer5"]
layout_mode = 2
text = "Back"

[node name="Options" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer5"]
layout_mode = 2
icon = ExtResource("4")

[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer5/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer5/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer5/Options" to="." method="_on_Options_pressed"]

[editable path="VBoxContainer/Players/Player2"]
[editable path="VBoxContainer/Players/Player3"]
[editable path="VBoxContainer/Players/Player4"]
